# HW6_PW_DB

./: README.md  pyproject.toml
m6_hwdb/: create_dp.py  fill_data.py  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  university.db
